# reqres-api-pytest

./: .env-example  README.md  pyproject.toml  requirements.txt
tests/heloisa-users/: test_login.py  test_users.py
tests/heloisa-users/features/: login.feature  users.feature
